fix movie category url in footer remove outline in mobile search make search open in blank page contact page center remove scroll in quiz fix tags font and aligns remomve bottom advert in quiz enable shareThis in result padding for tryAgain in result

--- a/Django-React/frontend/static/css/tailwind_build.css
+++ b/Django-React/frontend/static/css/tailwind_build.css
@@ -1055,6 +1055,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 1rem;
 }
 
+.w-2\/5 {
+  width: 40%;
+}
+
+.w-1\/5 {
+  width: 20%;
+}
+
 .min-w-\[40rem\] {
   min-width: 40rem;
 }
@@ -1162,6 +1170,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .items-center {
   align-items: center;
+}
+
+.items-baseline {
+  align-items: baseline;
 }
 
 .justify-center {
@@ -1624,6 +1636,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2.25rem;
 }
 
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -1709,6 +1725,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .shadow-zinc-800 {
   --tw-shadow-color: #27272a;
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .blur {
